--- a/doc/cs/prace.tex
+++ b/doc/cs/prace.tex
@@ -168,6 +168,19 @@ Abstract.
 	tabsize=4
 }
 
+\lstdefinestyle{html}{language=HTML,
+	showspaces=false,
+	showtabs=false,
+	breaklines=true,
+	showstringspaces=false,
+	breakatwhitespace=true,
+	commentstyle=\color{greencomments},
+	keywordstyle=\color{bluekeywords}\bfseries,
+	stringstyle=\color{redstrings},
+	basicstyle=\small\ttfamily,
+	tabsize=4
+}
+
 \lstset{style=sharpc}
 
 %% Titulní strana a různé povinné informační strany
